--- a/iiot/app_web/shop- takeapart/css/standard-flow.css
+++ b/iiot/app_web/shop- takeapart/css/standard-flow.css
@@ -134,14 +134,16 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 .fadebox .input_quantity input{ width: 50px; line-height: 35px; }
 
 .shopping_cart{ max-width: 1000px !important; margin: 0 auto; }
-.shopping_cart h3.top_title{ text-align: center; padding: 20px 0 15px; font-size: 18px; font-weight: bold; }
+.shopping_cart h3.top_title{ text-align: center; padding: 15px 0; font-size: 18px; font-weight: bold; }
 .shopping_cart h3.top_title span{ font-size: 14px; color: #888;  display: block; font-weight: normal; padding-top: 5px;}
+.shopping_cart h4.store_name{ text-align: center; padding: 5px 15px; font-size: 15px; color: #e85718; font-weight: bold; }
+
 .shopping_cart p.quantity_products{text-align: center; padding-bottom: 20px; font-size: 14px; line-height: 28px; color: #666666; }
 .shopping_cart p.quantity_products span{ color: #fe4513; padding: 0 5px; font-size: 18px;}
 
 .shop_mainbox .top_step{ width: 100%; top: 0; z-index: 3; position: sticky; position: -webkit-sticky; position: -moz-sticky; position: -ms-sticky; position: -o-sticky; border-bottom: 2px solid #eaeaea;}
-.shop_mainbox .top_step ul{ width: 100%; background-color: #fff; }
-.shop_mainbox .top_step ul li{ float: left; width: 33.33%; padding: 20px 0; position: relative;}
+.shop_mainbox .top_step ul{ width: 100%; background-color: #fff; max-width: 550px; margin: 0 auto; }
+.shop_mainbox .top_step ul li{ float: left; width: 50%; padding: 20px 0; position: relative;}
 .shop_mainbox .top_step ul li::after{ content: ""; position: absolute; right: -7.5px; top:calc(50% - 15px); width: 30px; height: 30px; display: block; background: url(../images/step_arr.png) center center no-repeat; background-size: contain; }
 .shop_mainbox .top_step ul li:last-child::after{ display: none; }
 .shop_mainbox .top_step ul li p{ font-size: 18px; font-weight: bold; color: #a2a2a2; text-align: center;}
@@ -181,20 +183,39 @@ ul.shopping_car_list .car_delete a:hover{ color: #e85718; }
 
 .shopping_cart p.sub_title{ text-align: center; font-weight: bold; color: #666; font-size: 14px; text-align: center; padding-top: 10px; }
 
-.shopping_cart ul.fillin{ max-width: 400px; padding: 15px; margin: 0 auto;}
-.shopping_cart ul.fillin li label{ width: 100%; display: block; font-size: 13.5px; color: #828282; padding:15px 0 10px 20px; }
+.shopping_cart ul.fillin{ max-width: 500px; padding-bottom: 15px; margin: 0 auto;}
+.shopping_cart ul.fillin li label{ width: 100%; display: block; font-size: 13.5px; color: #828282; padding:15px 0 5px 20px; }
 .shopping_cart ul.fillin li input{ width: 100%; border: 1px solid #fff; padding: 0 18px; margin: 0 auto; font-size: 15px; border-radius: 50px; height: 40px; background-color: #f0f0f0;}
 .shopping_cart ul.fillin li input::placeholder{ color: #a9a9a9; font-size: 13px; }
 .shopping_cart ul.fillin li textarea{ width: 100%; border: 1px solid #fff; padding: 15px 18px; min-height: 80px; line-height: 28px; margin: 0 auto; font-size: 15px; border-radius: 15px; background-color: #f0f0f0;}
 .shopping_cart ::-webkit-input-placeholder, .shopping_cart input::-moz-placeholder, .shopping_cart input::-moz-placeholder, .shopping_cart:-ms-input-placeholder{color: red;}
 .shopping_cart ul.fillin li input:focus{ border-color: #ff8a00; }
-
+.shopping_cart ul.fillin li span.org{ color: #e85718; padding-right: 3px;}
 .shopping_cart ul.fillin li.the_invoice{ padding: 10px 0; }
 .shopping_cart ul.fillin li.the_invoice h4{ font-size: 13.5px; color: #828282; padding:10px 0 10px 20px; }
-.shopping_cart ul.fillin li.the_invoice div{ position: relative; padding: 5px 0;}
-.shopping_cart ul.fillin li.the_invoice label{ font-size: 14px; font-weight: bold; color: #333; padding: 0; padding-left: 30px; }
+.shopping_cart ul.fillin li.the_invoice div{ position: relative; padding: 3px 0;}
+.shopping_cart ul.fillin li.the_invoice label{ font-size: 13.5px; font-weight: bold; color: #333; padding: 0; padding-left: 30px; }
 .shopping_cart ul.fillin li.the_invoice input{ padding: 0; height: inherit;}
 .shopping_cart ul.fillin li.invoice_fillin input{ margin-top: 5px; }
+
+.shopping_cart ul.fillin li .error_tips input, .shopping_cart ul.fillin li .error_tips textarea{ background-color: #fff4f4; }
+
+.shopping_cart ul.fillin li .f_box{ width: 100%;}
+.shopping_cart ul.fillin li p.error{ padding-left: 16px; font-weight: bold; line-height: 26px; color: #ff0000; font-size: 12px; padding-top: 5px; }
+.shopping_cart ul.fillin li p.error i{ padding-right: 5px; }
+.shopping_cart ul.fillin li p.s_f_g{ font-size: 12px; color: #999; padding-left: 16px; }
+
+.shopping_cart ul.fillin li .btn_yello{ float: right; margin-top: 5px; color: #936f6f; font-size: 12px; line-height: 28px; padding: 0 10px; display: block; background-color: #fffff0; border-radius: 4px; border:1px solid #f0e599; }
+.shopping_cart ul.fillin li .btn_yello a{ color: #936f6f;}
+.shopping_cart ul.fillin li .phone_verification .f_box{ float: left; width: calc(100% - 105px); }
+.shopping_cart ul.fillin li .phone_verification .result{ width: 100%; }
+.shopping_cart ul.fillin li .phone_verification .result p{ float: left; line-height: 30px; padding:0 20px; }
+.shopping_cart ul.fillin li .phone_verification .result .btn_yello{ margin-top: 0; float: left; }
+
+/*變圓角在input內*/
+.shopping_cart ul.fillin li .phone_verification2{ position: relative; }
+.shopping_cart ul.fillin li .phone_verification2 .btn_yello{ position: absolute; top: 2px; right:8px; border-radius: 20px; line-height: 24px;}
+/*變圓角在input內 END*/
 
 .shopping_cart ul.the_btn{ width: 100%; max-width: 800px;  padding: 15px  0; text-align: center; margin: 0 auto;}
 .shopping_cart ul.the_btn li{  display: inline-block; margin: 0 5px 10px 5px;}
@@ -238,17 +259,18 @@ ul.shopping_car_list .car_delete a:hover{ color: #e85718; }
 .order_list .car_name p.product_name{ text-align:left; padding: 5px; width: 100%;}
 .order_list .car_nb{ width: 80px; }
 
-ul.order_list_done{ width: 100%; margin: 0 auto; max-width: 500px; padding: 20px 0;}
-ul.order_list_done li{padding: 8px 0; border-bottom: 1px solid #f5f5f5;}
+ul.order_list_done{ width: 100%; margin: 0 auto; max-width: 500px; padding: 15px 0;}
+ul.order_list_done li{padding: 7px 0; border-bottom: 1px solid #f5f5f5;}
 ul.order_list_done li p{ font-size: 14px; line-height: 20px; }
 ul.order_list_done li span{ float: left; letter-spacing: 1px; }
-ul.order_list_done li span.l_t{ width: 90px; text-align: right; padding-right: 15px; color: #555;}
+ul.order_list_done li span.l_t{ width: 90px; text-align: left; padding-left: 15px; color: #555;}
 ul.order_list_done li span.r_info{ width:calc(100% - 90px); }
 ul.order_list_done li.bottom_line{ border-bottom: 1px dashed #a2a2a2; padding-bottom: 15px; margin-bottom: 15px;}
-ul.order_list_done li.buy_list span.l_t{ width:calc(100% - 110px); text-align: left; color: #333;}
-ul.order_list_done li.buy_list span.r_nb{ width:110px; text-align: right;}
-ul.order_list_done li.width_f p{ text-align: center; padding: 10px 0; color: #e85718; font-weight: bold; background-color: #fff7f7; border-radius: 10px;}
-ul.order_list_done li p.s_f{ font-size: 12px; color: #666; }
+ul.order_list_done li.buy_list span.l_t{ width:calc(100% - 120px); text-align: left; color: #333; padding-left: 15px;}
+ul.order_list_done li.buy_list span.r_nb{ width:120px; text-align: right; padding-right: 15px;}
+ul.order_list_done li.width_f{ border: none; }
+ul.order_list_done li.width_f p{ text-align: center; padding: 10px 0; font-size: 16px; color: #e85718; font-weight: bold; background-color: #fff7f7; border-radius: 10px;}
+ul.order_list_done li p.s_f{ font-size: 12px; color: #666; padding-left: 15px; }
 
 @media screen and (-ms-high-contrast: active),(-ms-high-contrast: none){
 	ul.shopping_car_list .car_delete a.yesDelets{ top:0px;}
@@ -274,7 +296,7 @@ ul.order_list_done li p.s_f{ font-size: 12px; color: #666; }
 }
 @media (max-width:750px){
 	.fadebox h3.top_title{ font-size: 17px; }
-	.shop_mainbox .top_step ul li{padding: 15px 0;}
+	.shop_mainbox .top_step ul li{ padding: 10px 0;}
 	.shop_mainbox .top_step ul li p{ font-size: 14px; }
 	.the_productbox .products_box .right_info{width: calc(100% - 135px);}
 	.the_productbox .products_box .manager_list h3.user_idight_info .top_title_box ul.products_tools p{font-size: 14px;}
@@ -291,7 +313,7 @@ ul.order_list_done li p.s_f{ font-size: 12px; color: #666; }
 }
 @media (max-width:650px){
 	.shopping_cart{ padding: 15px !important;}
-	.shopping_cart h3.top_title{padding-bottom: 5px;}
+	.shopping_cart h3.top_title{padding-bottom: 0px;}
 	.shopping_order .shopping_cart{ padding: 0 15px !important;}
 	.shopping_order .order_list{ padding: 0}
 	.shopping_order .order_list p{ font-size: 14px; }
@@ -347,7 +369,7 @@ ul.order_list_done li p.s_f{ font-size: 12px; color: #666; }
 	.shopping_cart h3.top_title{ font-size: 16px; }
 	.shopping_cart p.quantity_products{ font-size: 12px; }
 	.shopping_cart p.quantity_products span{ font-size: 14px; }
-	.order_list p{ font-size: 13px; }
+	ul.order_list_done li p, .order_list p, .shopping_cart ul.fillin li.the_invoice label{ font-size: 13px; }
 }
 @media screen and (max-height: 450px) {
 }
