--- a/iiot/app_web/admin - 191002/css/manager-standard-style.css
+++ b/iiot/app_web/admin - 191002/css/manager-standard-style.css
@@ -81,7 +81,7 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 .the_productbox .top_tool .selectbox p{ float: left; background-color: #ff9900; color: #fff; height: 40px; padding: 10px 18px 10px 22px; border-radius: 50px 0 0 50px; display: block; }
 .the_productbox .top_tool .selectbox p.use i{ color: #fff; }
 .the_productbox .top_tool .selectbox .styled-select{ float: left; height: 41px; width: 100%; max-width: calc(100% - 92px); background: url(../images/icon_arr.png) center right no-repeat; background-size: contain;}
-.the_productbox .top_tool .selectbox .styled-select select{ padding: 0 20px; font-size: 16px; color: #333;  width: calc(100% - 20px); height: 41px; line-height: 41px; background: none; }
+.the_productbox .top_tool .selectbox .styled-select select{ padding: 0 40px 0 20px; font-size: 16px; color: #333;  width:100%; height: 41px; line-height: 41px; background: none; }
 .the_productbox .top_tool a.btn_setting{ color: #4a4a4a; float: right; cursor: pointer; width: 41px; height: 41px; background-color: #fff; border-radius: 50%; text-align: center; line-height: 41px; }
 
 .the_productbox .top_tool ul.setting_tools{ position: absolute; display: none; right: 10px; top: 50px; z-index:1; width: 150px;  border: 1px solid #dfdfdf; border-radius: 8px; background-color: #fff;  box-shadow: 0 3px 10px rgba(0,0,0,.2);}
@@ -240,8 +240,9 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 .mainbox .top_box p.order_title{ float: right; font-size: 16px; line-height: 26px; font-weight: bold;}
 .mainbox .top_box a.the_search{float: right; width: 32px; text-align: center; line-height: 26px; margin-left: 8px; padding-left: 10px; color: #fea012;  position: relative;}
 .mainbox .top_box a.the_search::after{ content: ""; position: absolute; top:5px; left: 0; width: 1px; height: 15px; border-left: 1px solid #b2b2b2;}
-.mainbox .top_box .styled-select{ float: right; height: 26px; min-width: 110px; border-radius: 4px; background: url(../images/icon_arr.png) center right no-repeat #fff; background-size: contain;}
-.mainbox .top_box .styled-select select{ padding: 0 20px 0 10px; font-size: 16px; color: #333;  width: calc(100% - 20px); height: 26px; line-height: 26px; background: none; }
+.mainbox .top_box .styled-select{ float: right; height: 26px; min-width: 110px; border-radius: 4px; background: url(../images/icon_arr.png) center right no-repeat #555; background-size: contain;}
+.mainbox .top_box .styled-select select{ padding: 0 25px 0 10px; font-size: 16px; color: #fff;  width:100%; height: 26px; line-height: 26px; background: none; }
+.mainbox .top_box .styled-select select option{ background-color: #555; color: #fff;}
 
 .mainbox .search_content{ display: none; position: fixed; top: 46px; right: 0; z-index: 3; background-color: #fff; width: 100%; box-shadow: 0 3px 3px rgba(0,0,0,.2); }
 .mainbox .search_content span{ position: relative; }
