--- a/iiot/app_web/admin - 191002/css/manager-standard-style.css
+++ b/iiot/app_web/admin - 191002/css/manager-standard-style.css
@@ -260,6 +260,7 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 .order_management ul.order_detail li p{ font-size: 14px; line-height: 20px; }
 .order_management ul.order_detail li span{ float: left; letter-spacing: 1px; }
 .order_management ul.order_detail li span.l_t{ width: 108px; text-align: right; padding-right: 15px; color: #555;}
+.order_management ul.order_detail li span.r_info{ width: calc(100% - 110px); word-wrap:break-word; padding-right:5px; }
 .order_management ul.order_detail li span.oval{ font-size: 13px; float: none; }
 .order_management ul.order_detail li.bottom_line{ border-bottom: 1px dashed #a2a2a2; padding-bottom: 15px; margin-bottom: 7px;}
 .order_management ul.order_detail li.buy_list span.l_t{ width:calc(100% - 135px); text-align: left; color: #333;}
