--- a/iiot/app_web/admin - 191002/css/manager-standard-style.css
+++ b/iiot/app_web/admin - 191002/css/manager-standard-style.css
@@ -51,6 +51,11 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 .home_menu ul.service_items li p a span.icon_chart::after{ content: "\f080";}
 .home_menu ul.service_items li p a span.icon_signature::after{ content: "\f573";}
 
+.home_menu p.no_permission{ position: relative; width: 100%; text-align: center; padding: 85px 0; color: #888; }
+.home_menu p.no_permission::after{ content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 75px; display: block; background: url(../images/icon_lock.svg) center center no-repeat; background-size: contain; }
+
+.for_center{display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center;}
+
 .top_box{ width: 100%; background-color: #efefef; padding: 10px 15px; }
 .top_box .content_box{ max-width: 600px; height: 26px; position: relative;}
 .top_box .max_w_none{ max-width: inherit; }
