--- a/iiot/app_web/admin - 191002/css/manager-standard-style.css
+++ b/iiot/app_web/admin - 191002/css/manager-standard-style.css
@@ -286,6 +286,10 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 .terms_status ul.status_info li span{ float: left; letter-spacing: 1px; }
 .terms_status ul.status_info li span.l_t{ width: 44%; text-align: right; padding-right: 15px; color: #555;}
 
+.order_management .list tr td{ vertical-align: middle; padding: 8px 5px; }
+.order_management .list tr td:first-child{ text-align: left; padding:8px 10px; }
+.order_management .btn_swtich{ display: block; width: 42px; margin: 0 auto; }
+
 .chart_content{ width: 100%; padding-top: 47.5px; }
 .chart_content .top-option{ width: 100%;}
 .chart_content .top-option input[type=date]{ width: calc(100% - 80px); padding-right: 10px; background: none; border:none; text-align: center; background: url(icon_search.png) center right no-repeat; background-size: contain;}
