--- a/iiot/app_web/admin - 191002/css/manager-standard-style.css
+++ b/iiot/app_web/admin - 191002/css/manager-standard-style.css
@@ -36,6 +36,8 @@ h3.top_title{ text-align: center; padding: 20px 0 0; font-size: 16px; font-weigh
 .home_top_header .content_box{ width: calc(100% - 30px); max-width: 800px; }
 .home_top_header .logo{ float: left;}
 .home_top_header .logo a{ width: 100px; height: 60px; text-indent: -9999px; display: block; background: url(https://www.quickclick.cc/wp-content/uploads/2019/04/%E5%BF%AB%E4%B8%80%E9%BB%9E%E6%99%BA%E6%85%A7%E9%A4%90%E9%A3%B2%E6%96%B0%E9%9D%A9%E5%91%BD.png) center center no-repeat; background-size: contain; }
+.home_top_header .aptg-logo{ float: left;}
+.home_top_header .aptg-logo a{ width: 100px; height: 60px; text-indent: -9999px; display: block; background: url(/line/images/aptg-logo.jpg) center center no-repeat; background-size: contain; }
 .home_top_header p{ float: left; line-height: 60px; padding-left: 10px; font-weight: bold; font-size: 14px; }
 
 .home_menu{ width: 100%; height: 100vh; padding-top: 100px; background-color: #efefef;}
